--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "build": "babel src --out-dir dist",
+        "build": "npm run clean && npm run build-babel",
+        "start": "npm run build && node ./build/index.js",
         "test": "jest --watchAll --verbose --runInBand",
-        "start": "nodemon --exec babel-node index.js",
         "serve": "node dist/server.js",
         "flow": "flow",
         "flow:check": "flow check ./src/",
-        "lint": "eslint ./src"
+        "lint": "eslint ./src",
+        "build-babel": "babel -d ./build ./src -s"
     },
     "engines": {
         "node": "10.15.1"
