--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-    "presets": ["@babel/preset-env", "@babel/preset-flow"],
-    "plugins": [["@babel/transform-runtime"]]
+    "presets": ["@babel/preset-env", "@babel/preset-flow"]
+    //"plugins": [["@babel/transform-runtime"]]
 }
