--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "build": "npm run clean && npm run build-babel",
-        "start": "npm run build && node ./build/index.js",
+        "start": "node ./build/index.js",
         "test": "jest --watchAll --verbose --runInBand",
         "serve": "node dist/server.js",
         "flow": "flow",
@@ -13,8 +13,7 @@
         "lint": "eslint ./src",
         "build-babel": "babel -d ./build ./src -s",
         "clean": "mkdir build",
-        "devstart": "babel-node .src/index.js",
-        "heroku-postbuild": "cd client && npm install && npm run build"
+        "devstart": "babel-node .src/index.js"
     },
     "engines": {
         "node": "10.15.1"
