--- a/package.json
+++ b/package.json
@@ -40,7 +40,15 @@
         "lodash": "^4.17.4",
         "mongoose": "^5.0.2",
         "winston": "^2.4.0",
-        "winston-mongodb": "^3.0.0"
+        "winston-mongodb": "^3.0.0",
+        "@babel/cli": "^7.4.3",
+        "@babel/core": "^7.4.3",
+        "@babel/node": "^7.2.2",
+        "@babel/plugin-transform-runtime": "^7.4.3",
+        "@babel/preset-env": "^7.4.3",
+        "@babel/preset-flow": "^7.0.0",
+        "babel-eslint": "^10.0.1",
+        "babel-preset-env": "^1.7.0"
     },
     "devDependencies": {
         "@babel/cli": "^7.4.3",
