--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "flow:check": "flow check ./src/",
         "lint": "eslint ./src",
         "clean": "rm -rf build && mkdir build",
-        "build-server": "babel -d ./build ./src -s",
+        "build-server": "babel ./src/index.js -d ./build",
         "build": "npm run clean && npm run build-server",
         "start": "node ./build/index.js"
     },
