--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,7 @@
 {
     "parser": "babel-eslint",
-    "extends": ["plugin:flowtype/recommended", "airbnb/base", "prettier"],
-    "plugins": ["flowtype", "prettier"],
+    "extends": ["airbnb/base", "prettier"],
+    "plugins": ["prettier"],
     "rules": {
         "flowtype/no-types-missing-file-annotation": 0,
         "prettier/prettier": "error"
