--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "jest --watchAll --verbose --runInBand",
-        "start": "node index.js",
+        "start": "nodemon index.js",
         "serve": "node dist/server.js",
         "lint": "eslint ./src"
     },
