--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "jest --watchAll --verbose --runInBand",
-        "start": "node index.js",
+        "start": "nodemon  index.js",
         "serve": "node dist/server.js",
         "lint": "eslint ./src"
     },
@@ -16,19 +16,29 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "aws-sdk": "^2.535.0",
         "bcryptjs": "^2.4.3",
         "compression": "^1.7.3",
         "config": "^1.29.4",
         "cors": "^2.8.5",
+        "ejs": "^2.7.1",
         "express": "^4.16.2",
         "express-async-errors": "^2.1.0",
         "fawn": "^2.1.5",
         "helmet": "^3.15.0",
+        "heroku-ssl-redirect": "0.0.4",
         "joi": "^13.1.0",
         "joi-objectid": "^2.0.0",
+        "jsondiffpatch": "^0.3.11",
         "jsonwebtoken": "^8.1.1",
         "lodash": "^4.17.4",
         "mongoose": "^5.0.2",
+        "passport": "^0.4.0",
+        "passport-facebook": "^3.0.0",
+        "passport-google-oauth": "^2.0.0",
+        "passport-jwt": "^4.0.0",
+        "passport-twitter": "^1.0.4",
+        "url-parse": "^1.4.7",
         "winston": "^2.4.0",
         "winston-mongodb": "^3.0.0"
     },
