--- a/package.json
+++ b/package.json
@@ -17,14 +17,13 @@
     "license": "ISC",
     "dependencies": {
         "aws-sdk": "^2.535.0",
+        "axios": "^0.19.0",
         "bcryptjs": "^2.4.3",
         "compression": "^1.7.3",
-        "config": "^1.29.4",
         "cors": "^2.8.5",
         "ejs": "^2.7.1",
         "express": "^4.16.2",
         "express-async-errors": "^2.1.0",
-        "fawn": "^2.1.5",
         "helmet": "^3.15.0",
         "heroku-ssl-redirect": "0.0.4",
         "joi": "^13.1.0",
@@ -36,7 +35,6 @@
         "passport": "^0.4.0",
         "passport-facebook": "^3.0.0",
         "passport-google-oauth": "^2.0.0",
-        "passport-jwt": "^4.0.0",
         "passport-twitter": "^1.0.4",
         "url-parse": "^1.4.7",
         "winston": "^2.4.0",
