--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "license": "ISC",
     "dependencies": {
         "aws-sdk": "^2.535.0",
-        "axios": "^0.19.0",
         "bcryptjs": "^2.4.3",
         "compression": "^1.7.3",
         "cors": "^2.8.5",
@@ -25,6 +24,7 @@
         "express": "^4.16.2",
         "express-async-errors": "^2.1.0",
         "helmet": "^3.15.0",
+        "heroku-client": "^3.1.0",
         "heroku-ssl-redirect": "0.0.4",
         "joi": "^13.1.0",
         "joi-objectid": "^2.0.0",
