--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "jest --watchAll --verbose --runInBand",
-        "start": "node  index.js",
+        "start": "nodemon index.js",
         "serve": "node dist/server.js",
         "lint": "eslint ./src"
     },
@@ -49,6 +49,7 @@
         "eslint-plugin-import": "^2.17.2",
         "eslint-plugin-prettier": "^3.0.1",
         "jest": "^24.7.1",
+        "nodemon": "^2.0.1",
         "prettier": "1.17.0",
         "supertest": "^4.0.2"
     }
