--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
         "bcryptjs": "^2.4.3",
         "camelcase": "^5.3.1",
         "compression": "^1.7.4",
+        "ejs": "^3.0.2",
         "express": "^4.17.1",
         "express-async-errors": "^2.1.2",
+        "he": "^1.2.0",
         "helmet": "^3.21.2",
         "heroku-client": "^3.1.0",
         "heroku-ssl-redirect": "0.0.4",
