--- a/package.json
+++ b/package.json
@@ -42,12 +42,15 @@
         "mongoose-update-if-current": "^1.3.3",
         "passport": "^0.4.1",
         "passport-facebook": "^3.0.0",
+        "passport-github": "^1.1.0",
         "passport-google-oauth": "^2.0.0",
         "passport-twitter": "^1.0.4",
         "rate-limiter-flexible": "^2.0.0",
+        "rc-drawer": "^3.1.3",
         "rc-menu": "^8.0.3",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
+        "react-slick": "^0.25.2",
         "sanitize-html": "^1.22.1",
         "serialize-javascript": "^3.0.0",
         "style-to-object": "^0.3.0",
