--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "bcryptjs": "^2.4.3",
         "camelcase": "^5.3.1",
         "compression": "^1.7.4",
+        "decode-uri-component": "^0.2.0",
         "express": "^4.17.1",
         "express-async-errors": "^2.1.2",
         "he": "^1.2.0",
