--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "dependencies": {
         "@hapi/joi": "^17.1.0",
         "aws-sdk": "^2.625.0",
+        "axios": "^0.19.2",
         "bcryptjs": "^2.4.3",
         "camelcase": "^5.3.1",
         "compression": "^1.7.4",
         "decode-uri-component": "^0.2.0",
         "express": "^4.17.1",
         "express-async-errors": "^2.1.2",
+        "final-form": "^4.19.1",
         "he": "^1.2.0",
         "helmet": "^3.21.2",
         "heroku-client": "^3.1.0",
@@ -50,9 +52,11 @@
         "rc-menu": "^8.0.3",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
+        "react-final-form": "^6.4.0",
         "react-sidebar": "^3.0.2",
         "react-slick": "^0.25.2",
         "sanitize-html": "^1.22.1",
+        "sendmail": "^1.6.1",
         "serialize-javascript": "^3.0.0",
         "style-to-object": "^0.3.0",
         "url-parse": "^1.4.7",
