--- a/package.json
+++ b/package.json
@@ -67,7 +67,6 @@
         "ws": "^7.2.1"
     },
     "devDependencies": {
-        "babel-eslint": "^10.0.3",
         "@babel/cli": "^7.8.4",
         "@babel/core": "^7.9.0",
         "@babel/node": "^7.8.7",
@@ -75,7 +74,9 @@
         "@babel/polyfill": "^7.8.7",
         "@babel/preset-env": "^7.9.0",
         "@babel/preset-react": "^7.9.4",
+        "babel-eslint": "^10.0.3",
         "babel-loader": "^8.0.6",
+        "copy-webpack-plugin": "^6.0.1",
         "eslint": "^5.16.0",
         "eslint-config-airbnb-base": "^13.2.0",
         "eslint-config-prettier": "^4.3.0",
