--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "mongoose": "^5.9.2",
         "mongoose-update-if-current": "^1.3.3",
         "nodemailer": "^6.4.6",
+        "nodemailer-sendmail-transport": "^1.0.2",
         "passport": "^0.4.1",
         "passport-facebook": "^3.0.0",
         "passport-github": "^1.1.0",
