--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "jsondiffpatch": "^0.3.11",
         "jsonwebtoken": "^8.5.1",
         "lodash": "^4.17.15",
+        "mailgun-js": "^0.22.0",
         "mongoose": "^5.9.2",
         "mongoose-update-if-current": "^1.3.3",
         "nodemailer": "^6.4.6",
